# mcs_notes_and_resume

./: .gitignore  .gitmodules  README.md
ase/: .gitignore
ase/thingy-client-yellow/: .gitignore  README.md
bdi/s01/: final.sql  homework1_createdatabase.sql  homework1_createtable.sql  homework1_disabletriggers.sql  homework1_enabletriggers.sql  s01.tex
bdi/s02/: query.sql  s02.tex
bdi/s03/: s03.tex
bdi/s04/: latexmkrc  s04.tex
bdi/s05/: pom.xml
cc/s01/: ex4.txt  report.tex
dl/resume/: dl_resume.tex
formal-methods/resume/: latexmkrc  unifr_formal_methods.tex
fun-and-log-prog/: einstein.pl
mmcs/mmcs_resume/: latexmkrc  unifr_mmcs.tex
multicore-programming/s01/: .gitignore  result.txt
patrec/s01/: .gitignore  build.sbt
patrec/s02/: .gitignore  build.sbt
resumes/: mmc2_resume.tex  pl_resume.tex
seminars/fds/: fds_seminar.tex  latexmkrc  presentation.tex
seminars/fds_1/: fds_seminar.tex
seminars/fds_2/: example_2.pl  example_metagol.tex  family.pl  impl.pl  latexmkrc  metagol.pl  metagol_example.pl
sys-oriented-prog/exercices/s02/exercices/: .gitignore  CMakeLists.txt
sys-oriented-prog/exercices/s02/exercices/ex10/: ex10.c
sys-oriented-prog/exercices/s02/exercices/ex11/: ex11.c
sys-oriented-prog/exercices/s02/exercices/ex13/: ex13.c  ex13a.c
sys-oriented-prog/exercices/s02/exercices/ex4/: kr020.c
sys-oriented-prog/exercices/s02/exercices/ex5/: ex5.c
sys-oriented-prog/exercices/s02/exercices/ex6/: ex6.c
sys-oriented-prog/exercices/s02/exercices/ex7/: ex7.c
sys-oriented-prog/exercices/s02/exercices/ex8/: ex8.c
(+484 files in other folders)
