cmake_minimum_required(VERSION 3.9)
project(exercices C)

set(CMAKE_C_STANDARD 11)

add_executable(ex4 ex4/kr020.c)
add_executable(ex5 ex5/ex5.c)
add_executable(ex6 ex6/ex6.c)
add_executable(ex7 ex7/ex7.c)
add_executable(ex8 ex8/ex8.c)
add_executable(ex10 ex10/ex10.c)
add_executable(ex11 ex11/ex11.c)
add_executable(ex13 ex13/ex13.c)
add_executable(ex13a ex13/ex13a.c)
